fix fg-bg contrast of home link in nav bar

--- a/sass/_nav.sass
+++ b/sass/_nav.sass
@@ -15,7 +15,7 @@
   font-family: 'Source Code Pro', monospace
 
 .home > a
-  color: $dark-red
+  color: $light-red
 
 .contact > a
   color: $dark-blue
